--- a/_config.yml
+++ b/_config.yml
@@ -13,3 +13,5 @@ url: "http://iskolbin.github.io" # the base hostname & protocol for your site
 
 # Build settings
 markdown: kramdown
+collections:
+  - seminars
